<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaveThatDish</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">311859808965504</string>
    
    
    <string name="get_started">Start saving your dish! Log in using Facebook</string>
    <string name="settings">Settings</string>
    <string name="desc">Filler</string>
    <string name="searchtext">search your dishList</string>
    
    <string name="label">Individual restaurant labels</string>
    <string name="address">1234 Sample St, \n San Diego, CA 92122</string>
    <string name="name">Starbucks</string>
    <string name="rating">4.5</string>
    <string name="friends">5</string>
    <string name="distance">0.8</string>
        
    <string name="keywordHint">What are you craving?</string>

    <string name="searchMenu">search the menu</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
</resources>
