<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#D8D4D4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_alignTop="@+id/background"
        android:layout_alignLeft="@+id/background"
        android:contentDescription="@string/label"
        android:src="@drawable/label_logo" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
		android:adjustViewBounds="true"
        android:contentDescription="@string/label"
        android:src="@drawable/label_background" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/background"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="13dp"
        android:layout_toRightOf="@+id/logo"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/name" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logo"
        android:layout_alignLeft="@+id/name"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:text="@string/address" />


    <ImageView
        android:id="@+id/slide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_alignBottom="@+id/background"
		android:adjustViewBounds="true"
        android:contentDescription="@string/label"
        android:src="@drawable/label_info" />
    
    <ImageView
        android:id="@+id/more"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignRight="@+id/background"
        android:layout_below="@+id/address"
        android:contentDescription="@string/label"
        android:src="@drawable/label_more" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/background"
        android:layout_alignLeft="@+id/background"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/rating"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friends"
        android:layout_alignBottom="@+id/friends"
        android:layout_marginRight="6dp"
        android:layout_toLeftOf="@+id/more"
        android:text="@string/distance"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rating"
        android:layout_alignBottom="@+id/rating"
        android:layout_alignLeft="@+id/address"
        android:layout_marginLeft="60dp"
        android:text="@string/friends"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />
        
    </RelativeLayout>